--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
 
     - name: Build and Test
       shell: pwsh
-      run: dotnet test --configuration Release --output ./artifacts
+      run: ./build.ps1
       env:
         DOTNET_CLI_TELEMETRY_OPTOUT: true
         DOTNET_NOLOGO: true
