--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,12 +24,10 @@ jobs:
     - name: Setup .NET SDK
       uses: actions/setup-dotnet@v1
 
-    - name: Install Playwright CLI and browsers
+    - name: Install Playwright CLI
       shell: pwsh
       run: |
         dotnet tool install --global Microsoft.Playwright.CLI
-        cd ./PlaywrightTests
-        playwright install
 
     - name: Build and Test
       shell: pwsh
