--- a/PlaywrightTests/PlaywrightTests.csproj
+++ b/PlaywrightTests/PlaywrightTests.csproj
@@ -11,7 +11,7 @@
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3" />
   </ItemGroup>
-  <Target Name="DownloadBrowserDrivers" BeforeTargets="AfterBuild">
+  <Target Name="DownloadBrowserDrivers" AfterTargets="Build">
     <Exec Command="playwright install" />
   </Target>
 </Project>
