--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,9 +6,6 @@ on:
   pull_request:
     branches: [ main ]
 
-env:
-  DOTNET_ROLL_FORWARD: Major # HACK Remove once Playwright supports .NET 6
-
 jobs:
   build:
     name: ${{ matrix.os }}
@@ -30,7 +27,7 @@ jobs:
     - name: Install Playwright CLI
       shell: pwsh
       run: |
-        dotnet tool install --global Microsoft.Playwright.CLI --version 1.2.0
+        dotnet tool install --global Microsoft.Playwright.CLI
 
     - name: Build and Test
       shell: pwsh
