--- a/.editorconfig
+++ b/.editorconfig
@@ -9,5 +9,8 @@ indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
 
+[*.cs]
+csharp_style_namespace_declarations = file_scoped
+
 [*.{csproj,json,props}]
 indent_size = 2
