--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,13 @@ jobs:
       run: |
         dotnet tool install --global Microsoft.Playwright.CLI
 
+    - name: Configure BrowserStack credentials
+      if: ${{ github.repository_owner == 'martincostello' && github.actor == 'martincostello' }}
+      shell: pwsh
+      run: |
+        Write-Output "BROWSERSTACK_USERNAME=${{ secrets.BROWSERSTACK_USERNAME }}" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+        Write-Output "BROWSERSTACK_TOKEN=${{ secrets.BROWSERSTACK_TOKEN }}" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+
     - name: Build and Test
       shell: pwsh
       run: ./build.ps1
