--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,6 +53,14 @@ jobs:
         path: ./artifacts/screenshots/*
         if-no-files-found: ignore
 
+    - name: Publish traces
+      uses: actions/upload-artifact@v2
+      if: ${{ always() }}
+      with:
+        name: traces
+        path: ./artifacts/traces/*
+        if-no-files-found: ignore
+
     - name: Publish videos
       uses: actions/upload-artifact@v2
       if: ${{ always() }}
