--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
       uses: actions/setup-dotnet@v2
 
     - name: Configure BrowserStack credentials
-      if: ${{ github.repository_owner == 'martincostello' && github.actor == 'martincostello' }}
+      if: ${{ github.event.repository.fork == false && github.actor == 'martincostello' }}
       shell: pwsh
       run: |
         Write-Output "BROWSERSTACK_USERNAME=${{ secrets.BROWSERSTACK_USERNAME }}" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
