--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,8 +1,8 @@
 {
   "recommendations": [
-    "dbaeumer.vscode-eslint",
+    "davidanson.vscode-markdownlint",
     "EditorConfig.EditorConfig",
-    "k--kato.docomment",
+    "github.vscode-github-actions",
     "ms-dotnettools.csharp",
     "ms-vscode.PowerShell"
   ]
