Update Renovate configuration
- Move to `.github`.
- Add label to actionlint action.
- Disable dependabot.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,17 +3,5 @@ updates:
 - package-ecosystem: "github-actions"
   directory: "/"
   schedule:
-    interval: daily
-    time: "05:30"
+    interval: yearly
     timezone: Europe/London
-- package-ecosystem: nuget
-  directory: "/"
-  groups:
-    xunit:
-      patterns:
-        - xunit*
-  schedule:
-    interval: daily
-    time: "05:30"
-    timezone: Europe/London
-  open-pull-requests-limit: 99
